--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Playlist Maker</string>
+    <string name="app_name" translatable="false">Playlist maker</string>
+    <string name="search" translatable="false">Поиск</string>
+    <string name="media_library" translatable="false">Медиатека</string>
+    <string name="setup" translatable="false">Настройки</string>
+    <string name="dark_mode" translatable="false">Темная тема</string>
+    <string name="share_app" translatable="false">Поделиться приложением</string>
+    <string name="write_support" translatable="false">Написать в поддержку</string>
+    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
 </resources>
