--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="letter_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="agreement">https://yandex.ru/legal/practicum_offer/ru/</string>
     <string name="recipient">victoria_maksimova@mail.ru</string>
+    <string name="share_with">Отправить через</string>
+    <string name="mail_to">mailto:</string>
 </resources>
