--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="recipient">victoria_maksimova@mail.ru</string>
     <string name="share_with">Отправить через</string>
     <string name="mail_to">mailto:</string>
+    <string name="time">2:55</string>
+    <string name="track_name">Yesterday (Remastereввввввввввввввввd 2009)</string>
+    <string name="track_artist">The Beatlesssssssssssssssssssssssssssssssssssssssssssssssssss</string>
 </resources>
